# project1

./: AI使用日志.md  CMakeLists.txt  ChildFrm.cpp  Encryption.cpp  Encryption.h  InputDlg.cpp  InputDlg.h  Learning_Reflection_log.md  MFCApplication1.aps  MFCApplication1.cpp  MFCApplication1.rc  MFCApplication1.sln  MFCApplication1.vcxproj  MFCApplication1.vcxproj.filters  MFCApplication1Doc.cpp  MFCApplication1Doc.h  MFCApplication1Tests.vcxproj  MFCApplication1View.cpp  MFCApplication1View.h  MainFrm.cpp  README.md  SearchReplaceDlg.cpp  SearchReplaceDlg.h  SetStudentIDDlg.cpp  SetStudentIDDlg.h  pch.h  resource.h  test_core.cpp  test_core.h  项目报告.md
